--- a/Projekt/Projekt.csproj
+++ b/Projekt/Projekt.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F8B17492-C827-4A49-9F7F-CE53F5FF7050}</ProjectGuid>
+    <ProjectGuid>{63207337-A909-4921-AAAC-3D94A77E404B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>ProjektProgramowanieJakubDolecki</RootNamespace>
-    <AssemblyName>ProjektProgramowanieJakubDolecki</AssemblyName>
+    <RootNamespace>Projekt</RootNamespace>
+    <AssemblyName>Projekt</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
